force-app/main/default/objects/SPEN_WorkCategoryMilestone__c/SPEN_WorkCategoryMilestone__c.object-meta.xml
<CustomObject>
    <label>Work Category Milestone</label>
    <nameField>
        <displayFormat>WCM-{00000}</displayFormat>
        <label>Work Category Milestone</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Category Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>