force-app/main/default/objects/SPEN_WorkCategoryMilestone__c/fields/SPEN_Allow_Manual_Creation__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Allow_Manual_Creation__c</fullName>
    <description>ESC-74 : created as part of US 74.</description>
    <label>Allow Manual Creation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>