force-app/main/default/objects/SPEN_WorkCategoryMilestone__c/fields/SPEN_DelayStart__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DelayStart__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Delay Start (Days)</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>