force-app/main/default/objects/SPEN_WorkCategoryMilestone__c/fields/SPEN_JobMilestoneType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_JobMilestoneType__c</fullName>
    <label>Job Milestone Type (Linked to Job)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Consenting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>