force-app/main/default/objects/SPEN_WorkCategoryMilestone__c/fields/SPEN_LeadTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LeadTime__c</fullName>
    <label>Lead Time (Days)</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>