force-app/main/default/objects/SPEN_WorkCategoryMilestone__c/fields/SPEN_Milestone__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Milestone__c</fullName>
    <description>This will hold the milestone value</description>
    <label>Milestone</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>