force-app/main/default/objects/SPEN_WorkCategoryMilestone__c/fields/SPEN_ParentMilestone__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ParentMilestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will relate to the parent WC milestone</description>
    <label>Parent Milestone</label>
    <referenceTo>SPEN_WorkCategoryMilestone__c</referenceTo>
    <relationshipLabel>Work Category Milestones</relationshipLabel>
    <relationshipName>Work_Category_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>