force-app/main/default/objects/SPEN_WorkCategoryMilestone__c/fields/SPEN_Predefined_Milestone__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Predefined_Milestone__c</fullName>
    <description>ESC-74</description>
    <label>Predefined Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>