force-app/main/default/objects/SPEN_WorkCategoryMilestone__c/fields/SPEN_RAGYellow__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RAGYellow__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of days before Planned End Date when the milestone should display Yellow</description>
    <label>RAG Yellow</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>