force-app/main/default/objects/SPEN_WorkCategoryMilestone__c/fields/SPEN_WorkCategory__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WorkCategory__c</fullName>
    <description>It stores work category detail as parent to work category milestone</description>
    <label>Work Category</label>
    <referenceTo>SPEN_WorkCategory__c</referenceTo>
    <relationshipLabel>Work Category Milestones</relationshipLabel>
    <relationshipName>Work_Category_Milestones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>