force-app/main/default/objects/SPEN_WorkCategoryMilestone__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SPEN_WorkCategory__c</columns>
    <columns>SPEN_ParentMilestone__c</columns>
    <columns>NAME</columns>
    <columns>SPEN_Milestone__c</columns>
    <columns>SPEN_RAGYellow__c</columns>
    <columns>SPEN_LeadTime__c</columns>
    <columns>SPEN_DelayStart__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>